# ex_eip712

./: .gitignore  README.md  mix.exs
lib/: ex_eip712.ex
native/eip712/: Cargo.toml  README.md
native/eip712/crates/EIP-712/src/: eip712.rs
native/eip712/src/: lib.rs
test/: ex_eip712_test.exs
