[package]
name = "eip712"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "eip712"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.32.1"
web3-hash-utils = "1.0.0"
eip-712 = { path = "crates/EIP-712" }
serde_json = "1.0"
ethsign = "0.8.0"
rustc-hex = "2.1.0"
anyhow = "1.0.53"
